Working on adjusting ContactData form to prevent changing inputs on mobile.

--- a/burger-builder/src/containers/Checkout/ContactData/ContactData.module.css
+++ b/burger-builder/src/containers/Checkout/ContactData/ContactData.module.css
@@ -18,6 +18,7 @@
 .Input {
   width: 100%;
   margin-top: 20px;
+  margin-bottom: 20px;
   box-sizing: border-box;
 }
 
